Update: UX to make design more consistent and features easier to understand;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CardBase.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CardBase.razor
@@ -33,7 +33,7 @@
                 </FluentGridItem>
             }
             <FluentGridItem xs="6">
-                <FluentButton Style="width: 100%;" OnClick="EditButtonCallback" IconStart="@(new Icons.Regular.Size20.Edit())">@EditButtonText</FluentButton>
+                <FluentButton Style="width: 100%;" OnClick="EditButtonCallback" IconStart="@EditButtonIcon">@EditButtonText</FluentButton>
             </FluentGridItem>
             @if (ShowPrimaryButton)
             {
