--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -1,4 +1,4 @@
-﻿<CardBase Title="@StringResources.Character_Personality" EditButtonCallback="EditPersonality" CardClickCallback="EditPersonality" HasValidationErrors="@(ViewModel.HasValidationErrors)">
+﻿<CardBase Title="@StringResources.Character_Personality" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditPersonality" CardClickCallback="EditPersonality" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
     <div><strong>@StringResources.Character_Name:</strong> @ViewModel.CharacterName </div>
     <br />
@@ -20,4 +20,11 @@
     <div><strong>@StringResources.Character_Personality_Attitute:</strong> @ViewModel.Attitute </div>
     <br />
     <div><strong>@StringResources.Character_Personality_Experience:</strong> @ViewModel.Experience </div>
+    
+    <!--Spacer in case there is no image-->
+    @if (string.IsNullOrWhiteSpace(ViewModel.Base64EncodedImage))
+    {
+        <div style="height: 200px; width: 200px;" />
+        <br />
+    }
 </CardBase>
