--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CharacterCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CharacterCard.razor
@@ -16,7 +16,7 @@
     <br />
     <div><strong>@StringResources.Character_Personality_Race:</strong> @ViewModel.PersonalityViewModel.Race </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Attitute:</strong> @ViewModel.PersonalityViewModel.Attitute </div>
+    <div><strong>@StringResources.Character_Personality_Attitude:</strong> @ViewModel.PersonalityViewModel.Attitude </div>
 
     <!--Spacer in case there is no image-->
     @if (string.IsNullOrWhiteSpace(ViewModel.PersonalityViewModel.Base64EncodedImage))
