--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -17,7 +17,7 @@
     <br />
     <div><strong>@StringResources.Character_Personality_Race:</strong> @ViewModel.Race </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Attitute:</strong> @ViewModel.Attitute </div>
+    <div><strong>@StringResources.Character_Personality_Attitude:</strong> @ViewModel.Attitude </div>
     <br />
     <div><strong>@StringResources.Character_Personality_Experience:</strong> @ViewModel.Experience </div>
     
