--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DeleteCharacterDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DeleteCharacterDialog.razor
@@ -16,7 +16,7 @@
     <br />
     <div><strong>@StringResources.Character_Personality_Race:</strong> @Content.PersonalityViewModel.Race </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Attitute:</strong> @Content.PersonalityViewModel.Attitute </div>
+    <div><strong>@StringResources.Character_Personality_Attitude:</strong> @Content.PersonalityViewModel.Attitude </div>
 </DeleteDialogBase>
 
 
