--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
@@ -49,8 +49,8 @@
     <ValidationMessage For="@(() => Content.Race)" />
     <br />
 
-    <FluentTextField @bind-Value="Content.Attitute" Label="@StringResources.Character_Personality_Attitute" Immediate="true" />
-    <ValidationMessage For="@(() => Content.Attitute)" />
+    <FluentTextField @bind-Value="Content.Attitude" Label="@StringResources.Character_Personality_Attitude" Immediate="true" />
+    <ValidationMessage For="@(() => Content.Attitude)" />
     <br />
 
     <FluentTextField InputMode="InputMode.Numeric" @bind-Value="Content.Experience" Label="@StringResources.Character_Personality_Experience" Immediate="true" Required="true" title="@StringResources.Validation_Tooltip_Required" />
