--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PropertiesCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PropertiesCard.razor
@@ -1,5 +1,32 @@
-﻿<h3>PropertiesCard</h3>
+﻿<CardBase Title="@StringResources.Character_Personality" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditPersonality" CardClickCallback="EditPersonality" HasValidationErrors="@(ViewModel.HasValidationErrors)">
+    <br />
+    <div><strong>@StringResources.Character_Name:</strong> @ViewModel.CharacterName </div>
+    <br />
+    @if (string.IsNullOrWhiteSpace(ViewModel.Base64EncodedImage) is false)
+    {
+        <img src="data:image/jpeg;base64,@ViewModel.Base64EncodedImage" style="height: 200px; width: 200px;" alt="Base64 Image" />
+        <br />
+    }
+    <div><strong>@StringResources.Character_Personality_Class:</strong> @ViewModel.ClassName </div>
+    <br />
+    <div><strong>@StringResources.Character_Personality_Level:</strong> @ViewModel.Level </div>
+    <br />
+    <div><strong>@StringResources.Character_Personality_Background:</strong> @ViewModel.Background </div>
+    <br />
+    <div><strong>@StringResources.Character_Personality_PlayerName:</strong> @ViewModel.PlayerName </div>
+    <br />
+    <div><strong>@StringResources.Character_Personality_Race:</strong> @ViewModel.Race </div>
+    <br />
+    <div><strong>@StringResources.Character_Personality_Attitude:</strong> @ViewModel.Attitude </div>
+    <br />
+    <div><strong>@StringResources.Character_Personality_Experience:</strong> @ViewModel.Experience </div>
 
-@code {
+    <!--Spacer in case there is no image-->
+    @if (string.IsNullOrWhiteSpace(ViewModel.Base64EncodedImage))
+    {
+        <div style="height: 200px; width: 200px;" />
+        <br />
+    }
+</CardBase>
 
-}
+
