--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PropertiesCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PropertiesCard.razor
@@ -1,32 +1,22 @@
-﻿<CardBase Title="@StringResources.Character_Personality" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditPersonality" CardClickCallback="EditPersonality" HasValidationErrors="@(ViewModel.HasValidationErrors)">
+﻿<CardBase Title="@StringResources.Character_Properties" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditProperties" CardClickCallback="EditProperties" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
-    <div><strong>@StringResources.Character_Name:</strong> @ViewModel.CharacterName </div>
+    <div><strong>@StringResources.Character_Properties_Strength:</strong> @ViewModel.Strength </div>
     <br />
-    @if (string.IsNullOrWhiteSpace(ViewModel.Base64EncodedImage) is false)
-    {
-        <img src="data:image/jpeg;base64,@ViewModel.Base64EncodedImage" style="height: 200px; width: 200px;" alt="Base64 Image" />
-        <br />
-    }
-    <div><strong>@StringResources.Character_Personality_Class:</strong> @ViewModel.ClassName </div>
+    <div><strong>@StringResources.Character_Properties_Skill:</strong> @ViewModel.Skill </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Level:</strong> @ViewModel.Level </div>
+    <div><strong>@StringResources.Character_Properties_Constitution:</strong> @ViewModel.Constitution </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Background:</strong> @ViewModel.Background </div>
+    <div><strong>@StringResources.Character_Properties_Intelligence:</strong> @ViewModel.Intelligence </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_PlayerName:</strong> @ViewModel.PlayerName </div>
+    <div><strong>@StringResources.Character_Properties_Wisdom:</strong> @ViewModel.Wisdom </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Race:</strong> @ViewModel.Race </div>
+    <div><strong>@StringResources.Character_Properties_Charisma:</strong> @ViewModel.Charisma </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Attitude:</strong> @ViewModel.Attitude </div>
+    <div><strong>@StringResources.Character_Properties_Inspiration:</strong> @ViewModel.Inspiration </div>
     <br />
-    <div><strong>@StringResources.Character_Personality_Experience:</strong> @ViewModel.Experience </div>
-
-    <!--Spacer in case there is no image-->
-    @if (string.IsNullOrWhiteSpace(ViewModel.Base64EncodedImage))
-    {
-        <div style="height: 200px; width: 200px;" />
-        <br />
-    }
+    <div><strong>@StringResources.Character_Properties_TrainingBonus:</strong> @ViewModel.TrainingBonus </div>
+    <br />
+    <div><strong>@StringResources.Character_Properties_PassiveWisdomRecognition:</strong> @ViewModel.PassiveWisdomRecognition </div>
 </CardBase>
 
 
