--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -8,6 +8,9 @@
     <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2">
         <PersonalityCard @bind-ViewModel="@(ViewModel.CharacterViewModelToEdit.PersonalityViewModel)" />
     </FluentGridItem>
+    <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2">
+        <PropertiesCard @bind-ViewModel="@(ViewModel.CharacterViewModelToEdit.PropertiesViewModel)" />
+    </FluentGridItem>
 </FluentGrid>
 <br />
 
