--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/PersonalityCard.razor
@@ -1,4 +1,6 @@
-﻿<CardBase Title="@StringResources.Character_Personality" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditPersonality" CardClickCallback="EditPersonality" HasValidationErrors="@(ViewModel.HasValidationErrors)">
+﻿@inherits GenericCard<PersonalityViewModel, EditPersonalityDialog>
+
+<CardBase Title="@StringResources.Character_Personality" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditAsync" CardClickCallback="EditAsync" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
     <div><strong>@StringResources.Character_Name:</strong> @ViewModel.CharacterName </div>
     <br />
