--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -11,6 +11,9 @@
     <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2">
         <PropertiesCard @bind-ViewModel="@(ViewModel.CharacterViewModelToEdit.PropertiesViewModel)" />
     </FluentGridItem>
+    <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2">
+        <RescueDicesCard @bind-ViewModel="@(ViewModel.CharacterViewModelToEdit.RescueDicesViewModel)" />
+    </FluentGridItem>
 </FluentGrid>
 <br />
 
