Fix: Some Build-Errors by introducing `IValidateAndCopyableViewModel` so that we have an `IValidateableViewModel` without being forced to also implement `IShallowCopyable`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DialogBase.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DialogBase.razor
@@ -1,5 +1,5 @@
 ﻿@typeparam TViewModel
-@implements IDialogContentComponent<IValidateableViewModel<TViewModel>>
+@implements IDialogContentComponent<IValidateAndCopyableViewModel<TViewModel>>
 
 <FluentDialogHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
