--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/RescueDicesCard.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/RescueDicesCard.razor
@@ -1,6 +1,6 @@
 ﻿@inherits GenericCard<RescueDicesViewModel, EditRescueDicesDialog>
 
-<CardBase Title="@StringResources.Character_RescueDices" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditProperties" CardClickCallback="EditProperties" HasValidationErrors="@(ViewModel.HasValidationErrors)">
+<CardBase Title="@StringResources.Character_RescueDices" EditButtonText="@EditButtonText" EditButtonIcon="@EditButtonIcon" EditButtonCallback="EditAsync" CardClickCallback="EditAsync" HasValidationErrors="@(ViewModel.HasValidationErrors)">
     <br />
     <div><strong>@StringResources.Character_Strength:</strong> @ViewModel.Strength </div>
     <br />
