Remove: `typeparam` from `DialogBase` since `DialogBase` only needs `IValidateableViewModel` and not also `IShallowCopyable`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DialogBase.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DialogBase.razor
@@ -1,5 +1,4 @@
-﻿@typeparam TViewModel
-@implements IDialogContentComponent<IValidateAndCopyableViewModel<TViewModel>>
+﻿@implements IDialogContentComponent<IValidateableViewModel>
 
 <FluentDialogHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
