Fix: Some Dialogs that use `DialogBase` still tried to provide `typeparam`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/ValidationErrorDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/ValidationErrorDialog.razor
@@ -1,6 +1,6 @@
 ﻿@implements IDialogContentComponent<IValidateableViewModel>
 
-<DialogBase TViewModel="IValidateableViewModel" Content="@Content" SubmitButtonText="@StringResources.Button_Ok">
+<DialogBase Content="@Content" SubmitButtonText="@StringResources.Button_Ok">
     <FluentLabel Typo="Typography.PaneHeader" Color="Color.Error">@StringResources.Validation_CannotSave</FluentLabel>
     <br />
     <FluentDivider />
