--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DialogBase.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/DialogBase.razor
@@ -1,4 +1,4 @@
-﻿@implements IDialogContentComponent<IValidateableViewModel>
+﻿@implements IDialogContentComponent<IValidateable>
 
 <FluentDialogHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
