--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/ValidationErrorDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/ValidationErrorDialog.razor
@@ -1,4 +1,4 @@
-﻿@implements IDialogContentComponent<IValidateableViewModel>
+﻿@implements IDialogContentComponent<IValidateable>
 
 <DialogBase Content="@Content" SubmitButtonText="@StringResources.Button_Ok">
     <FluentLabel Typo="Typography.PaneHeader" Color="Color.Error">@StringResources.Validation_CannotSave</FluentLabel>
