--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Characters.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Characters.razor
@@ -1,26 +1,30 @@
-﻿<FluentHeader>
-    <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
-        <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Characters</FluentLabel>
-    </FluentStack>
-</FluentHeader>
+﻿<FluentLayout>
+    <FluentHeader>
+        <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
+            <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Characters</FluentLabel>
+        </FluentStack>
+    </FluentHeader>
 
-<FluentGrid Style=@($"""background-color: var(--neutral-layer-3); padding: 4px;""")>
-    @foreach (var character in ViewModel.Characters)
-    {
-        <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2" HiddenWhen="@(character.Search(SearchText ?? string.Empty, false) ? GridItemHidden.None : GridItemHidden.XsAndUp)">
-            <CharacterCard ViewModel="character" ViewModelChanged="PropertyChangedAsync" />
-        </FluentGridItem>
-    }  
-</FluentGrid>
-<br />
+    <FluentBodyContent>
+        <FluentGrid Style=@($"""background-color: var(--neutral-layer-3); padding: 4px;""")>
+            @foreach (var character in ViewModel.Characters)
+            {
+                <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2" HiddenWhen="@(character.Search(SearchText ?? string.Empty, false) ? GridItemHidden.None : GridItemHidden.XsAndUp)">
+                    <CharacterCard ViewModel="character" ViewModelChanged="PropertyChangedAsync" />
+                </FluentGridItem>
+            }
+        </FluentGrid>
+        <br />
+    </FluentBodyContent>
 
-<FluentFooter>
-    <br />
-    <FluentDivider />
-    <br />
-    <DebouncedSearch @bind-SearchText="@SearchText" PlaceHolder="@StringResources.Search_CharacterPlaceholder" Style="width: 100%" />
-    <br />
-</FluentFooter>
+    <FluentFooter>
+        <br />
+        <FluentDivider />
+        <br />
+        <DebouncedSearch @bind-SearchText="@SearchText" PlaceHolder="@StringResources.Search_CharacterPlaceholder" Style="width: 100%" />
+        <br />
+    </FluentFooter>
+</FluentLayout>
 
 <!--This break ensures that the search-bar is not completely at the end of the page-->
 <br />
