--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Info.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Info.razor
@@ -1,43 +1,47 @@
-﻿<FluentHeader>
-    <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
-        <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Info</FluentLabel>
-    </FluentStack>
-</FluentHeader>
-<br />
+﻿<FluentLayout>
+    <FluentHeader>
+        <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
+            <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Info</FluentLabel>
+        </FluentStack>
+    </FluentHeader>
 
-<FluentStack Orientation="Orientation.Vertical"
-             VerticalAlignment="VerticalAlignment.Center"
-             HorizontalAlignment="HorizontalAlignment.Start">
-    <FluentLabel Typo="Typography.PaneHeader">@StringResources.App_Info</FluentLabel>
-    <br />
-    <div><strong>@StringResources.App_Version:</strong> @Assembly.GetEntryAssembly()?.GetName()?.Version</div>
-</FluentStack>
+    <FluentBodyContent>
+        <br />
+        <FluentStack Orientation="Orientation.Vertical"
+                     VerticalAlignment="VerticalAlignment.Center"
+                     HorizontalAlignment="HorizontalAlignment.Start">
+            <FluentLabel Typo="Typography.PaneHeader">@StringResources.App_Info</FluentLabel>
+            <br />
+            <div><strong>@StringResources.App_Version:</strong> @Assembly.GetEntryAssembly()?.GetName()?.Version</div>
+        </FluentStack>
 
-<br />
-<FluentDivider />
-<br />
+        <br />
+        <FluentDivider />
+        <br />
 
-<FluentStack Orientation="Orientation.Vertical"
-             VerticalAlignment="VerticalAlignment.Center"
-             HorizontalAlignment="HorizontalAlignment.Start">
-    <FluentLabel Typo="Typography.PaneHeader">@StringResources.App_ExternalLibraries</FluentLabel>
-    <br />
-    <li>Prism.Core</li>
-    <li>PublishSPAforGitHubPages.Build</li>
-    <li>sqlite-net-pcl</li>
-    <br />
-    <FluentLabel Typo="Typography.PaneHeader">@StringResources.App_TransitiveExternalLibraries</FluentLabel>
-    <br />
-    <li>BlazorWasmBrotliLoader.Build</li>
-    <li>Prism.Container.Abstractions</li>
-    <li>Prism.Events</li>
-    <li>SQLitePCLRaw.bundle_green</li>
-    <li>SQLitePCLRaw.core</li>
-    <li>SQLitePCLRaw.lib.e_sqlite3</li>
-    <li>SQLitePCLRaw.lib.e_sqlite3.android</li>
-    <li>SQLitePCLRaw.provider.e_sqlite3</li>
-    <li>SQLitePCLRaw.provider.sqlite3</li>
-</FluentStack>
+        <FluentStack Orientation="Orientation.Vertical"
+                     VerticalAlignment="VerticalAlignment.Center"
+                     HorizontalAlignment="HorizontalAlignment.Start">
+            <FluentLabel Typo="Typography.PaneHeader">@StringResources.App_ExternalLibraries</FluentLabel>
+            <br />
+            <li>Prism.Core</li>
+            <li>PublishSPAforGitHubPages.Build</li>
+            <li>sqlite-net-pcl</li>
+            <br />
+            <FluentLabel Typo="Typography.PaneHeader">@StringResources.App_TransitiveExternalLibraries</FluentLabel>
+            <br />
+            <li>BlazorWasmBrotliLoader.Build</li>
+            <li>Prism.Container.Abstractions</li>
+            <li>Prism.Events</li>
+            <li>SQLitePCLRaw.bundle_green</li>
+            <li>SQLitePCLRaw.core</li>
+            <li>SQLitePCLRaw.lib.e_sqlite3</li>
+            <li>SQLitePCLRaw.lib.e_sqlite3.android</li>
+            <li>SQLitePCLRaw.provider.e_sqlite3</li>
+            <li>SQLitePCLRaw.provider.sqlite3</li>
+        </FluentStack>
+    </FluentBodyContent>
+</FluentLayout>
 
 <!--This break ensures that the label is not completely at the end of the page-->
 <br />
