Remove: `Scrollbar` that came with `FluentLayout` and `FluentBodyContent`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CardBase.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Cards/CardBase.razor
@@ -6,7 +6,7 @@
             </FluentStack>
         </FluentHeader>
 
-        <FluentBodyContent>
+        <FluentBodyContent Style="overflow:hidden">
             <FluentAccordion>
                 <FluentAccordionItem Heading="@StringResources.Button_Properties" Expanded="true">
                     <div style="cursor: pointer;">
