I give up... I made `addOpacityToBackground` work, but there are endless layer that provide a background-color so we cannot have opacity-effects...

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/CurrentCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/CurrentCharacter.razor
@@ -1,4 +1,4 @@
-﻿<FluentLayout Id="currentCharacterFluentLayout" Style="height: 90vh">
+﻿<FluentLayout Style="height: 90vh">
     <FluentHeader>
         <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
             <FluentLabel Typo="Typography.PaneHeader">@ViewModel.CurrentCharacterViewModel!.PersonalityViewModel.CharacterName</FluentLabel>
