Fix: UI-Problems since `FluentLayout` needs something like `Style="height: 90vh"`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Info.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Info.razor
@@ -1,4 +1,4 @@
-﻿<FluentLayout>
+﻿<FluentLayout Style="height: 90vh">
     <FluentHeader>
         <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
             <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Info</FluentLabel>
@@ -41,6 +41,7 @@
             <li>SQLitePCLRaw.provider.sqlite3</li>
         </FluentStack>
     </FluentBodyContent>
+    <FluentFooter />
 </FluentLayout>
 
 <!--This break ensures that the label is not completely at the end of the page-->
