--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/CurrentCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/CurrentCharacter.razor
@@ -5,7 +5,7 @@
         </FluentStack>
     </FluentHeader>
 
-    <FluentBodyContent Style=" height: 85vh;">
+    <FluentBodyContent>
         <FluentGrid Style="background-color: var(--neutral-layer-3); padding: 4px;">
             <FluentGridItem xs="12" sm="12" md="6" lg="4" xl="3" xxl="2" HiddenWhen="@(ViewModel.CurrentCharacterViewModel!.PersonalityViewModel.Search(SearchText ?? string.Empty, true) ? GridItemHidden.None : GridItemHidden.XsAndUp)">
                 <PersonalityCard @bind-ViewModel="@(ViewModel.CurrentCharacterViewModel!.PersonalityViewModel)" EditButtonText="@StringResources.Button_Adapt" EditButtonIcon="@(new Icons.Regular.Size20.NoteEdit())" />
