--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Settings.razor
@@ -9,7 +9,7 @@
     <FluentProgressRing Visible="@ViewModel.IsBusy" />
 </FluentOverlay>
 
-<FluentLayout>
+<FluentLayout Style="height: 90vh">
     <FluentHeader>
         <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
             <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Settings</FluentLabel>
@@ -60,6 +60,7 @@
             </FluentSelect>
         </FluentStack>
     </FluentBodyContent>
+    <FluentFooter />
 </FluentLayout>
 
 <!--This break ensures that the select is not completely at the end of the page-->
