WIP: Use `Grid` instead of `StackLayout`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/CurrentCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/CurrentCharacter.razor
@@ -20,11 +20,17 @@
     </FluentBodyContent>
 
     <FluentFooter>
-        <FluentStack Orientation="Orientation.Vertical" VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
-            <br />
-            <FluentButton OnClick="EditCharacter" Appearance="Appearance.Accent" IconStart="@(new Icons.Regular.Size20.EditPerson())">@StringResources.Button_Edit</FluentButton>
-            <DebouncedSearch @bind-SearchText="@SearchText" PlaceHolder="@StringResources.Search_CardsPlaceholder" Style="width: 100%" />
-        </FluentStack>
+        <FluentGrid Justify="JustifyContent.SpaceAround" Style="width: 100%;">
+            <FluentGridItem xs="12">
+                <FluentSpacer />
+            </FluentGridItem>
+            <FluentGridItem xs="6">
+                <FluentButton Style="width: 100%;" OnClick="EditCharacter" Appearance="Appearance.Accent" IconStart="@(new Icons.Regular.Size20.EditPerson())">@StringResources.Button_Edit</FluentButton>
+            </FluentGridItem>
+            <FluentGridItem xs="12" sm="6">
+                <DebouncedSearch @bind-SearchText="@SearchText" PlaceHolder="@StringResources.Search_CardsPlaceholder" Style="width: 100%" />
+            </FluentGridItem>
+        </FluentGrid>
     </FluentFooter>
 </FluentLayout>
 
