Update: Create solution with `FluentLayout` where `Header` and `Footer` are always visible and where `Footer` tries to optimize height when there is a search-bar;
Comment: Also found out that `FluentLayout` should have `Style="height: 90vh"` and 90 is the highest value where on Google Pixel 5 the Footer is always completly visible. Using a value higher than 90 can cause to hide search-bar and user would need to scroll;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/CurrentCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/CurrentCharacter.razor
@@ -24,10 +24,10 @@
             <FluentGridItem xs="12">
                 <FluentSpacer />
             </FluentGridItem>
-            <FluentGridItem xs="6">
+            <FluentGridItem xs="6" sm="3" md="6">
                 <FluentButton Style="width: 100%;" OnClick="EditCharacter" Appearance="Appearance.Accent" IconStart="@(new Icons.Regular.Size20.EditPerson())">@StringResources.Button_Edit</FluentButton>
             </FluentGridItem>
-            <FluentGridItem xs="12" sm="6">
+            <FluentGridItem xs="12" sm="9" md="6">
                 <DebouncedSearch @bind-SearchText="@SearchText" PlaceHolder="@StringResources.Search_CardsPlaceholder" Style="width: 100%" />
             </FluentGridItem>
         </FluentGrid>
