--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Characters.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Characters.razor
@@ -1,4 +1,4 @@
-﻿<FluentLayout>
+﻿<FluentLayout Style="height: 90vh">
     <FluentHeader>
         <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
             <FluentLabel Typo="Typography.PaneHeader">@StringResources.Page_Characters</FluentLabel>
@@ -18,11 +18,14 @@
     </FluentBodyContent>
 
     <FluentFooter>
-        <br />
-        <FluentDivider />
-        <br />
-        <DebouncedSearch @bind-SearchText="@SearchText" PlaceHolder="@StringResources.Search_CharacterPlaceholder" Style="width: 100%" />
-        <br />
+        <FluentGrid Justify="JustifyContent.SpaceAround" Style="width: 100%;">
+            <FluentGridItem xs="12">
+                <FluentSpacer />
+            </FluentGridItem>
+            <FluentGridItem xs="12">
+                <DebouncedSearch @bind-SearchText="@SearchText" PlaceHolder="@StringResources.Search_CharacterPlaceholder" Style="width: 100%" />
+            </FluentGridItem>
+        </FluentGrid>
     </FluentFooter>
 </FluentLayout>
 
